# spacecraft-android

./: .gitignore  .gitlab-ci-account.yml  .gitlab-ci-android.yml  .gitlab-ci-fwk.yml  .gitlab-ci-hotel.yml  .gitlab-ci-main.yml  .gitlab-ci-myhome.yml  .gitlab-ci.yml  .gitmodules  .travis.yml  404.html  AndroidGodEye-MethodCanary.js  Pipfile  README.md  apk-checker-config.json  build.gradle  build.gradle.1  build.gradle.kts  debug.jks.enc  feed_rss_created.xml  feed_rss_updated.xml  google-services.json.enc  gradle.properties  import-summary.txt  index.html  lint.xml  mkdocs.yml  module_config.json  release.jks.enc  requirements.txt  secrets.tar.enc  sentry.properties  settings.gradle  settings.gradle.kts  sitemap.xml
android/base/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/base/src/debug/: AndroidManifest.xml
android/base/src/main/assets/android-godeye-config/: install.config
android/base/src/main/cpp/pwv/: pwx.cc
android/base/src/main/res/drawable/: background.xml  ic_battery_20_apricot_24dp.xml  ic_battery_50_apricot_24dp.xml  ic_lock_open_apricot_24dp.xml  ic_lock_outline_apricot_24dp.xml  ic_menu_black_24dp.xml  ic_play_circle_filled_apricot_24dp.xml  ic_repeat_apricot_24dp.xml  ic_stop_apricot_24dp.xml
android/base/src/main/res/layout/: activity_recoder.xml  activity_webview.xml  item_icon_and_text.xml
android/base/src/main/res/values/: themes.xml  values.xml
android/base/src/main/res/values-v23/: themes.xml
android/components/box-module/jsruntime/: CMakeLists.txt  build.gradle.kts
android/framework/image/: CMakeLists.txt  README.md  build.gradle
android/framework/image/src/main/: AndroidManifest.xml
common/: CMakeLists.txt  README.md  build.gradle
common/animationsExprimental/main/res-frame-animation/drawable/: animation_vector_drawable_template2.xml
common/animationsExprimental/main/res/layout/: activity_detail.xml
common/animationsExprimental/main/res/transition/: slide.xml
common/animationsExprimental/main/res/transition-v21/: transition_window_share_element_exit.xml
common/async/: README.md
common/carousel/main/res/layout/: activity_pager_view.xml  activity_viewpager.xml
common/drawable/main/res/drawable/: animationlist.xml  toggle_unchecked_checked.xml
common/drawable/main/res/layout/: activity_drawable.xml
common/scrollExprimental/main/: AndroidManifest.xml
common/scrollExprimental/main/res/layout/: activity_scrollable.xml
common/src/animationsExprimental/res-frame-animation/drawable/: animation_drawable_template.xml
common/src/animationsExprimental/res/layout/: activity_transition_for_view.xml  item_image_and_text.xml
common/src/animationsExprimental/res/transition-v21/: change_transform.xml  return_detail.xml
common/src/animationsExprimental/res/values-v21/: styles.xml
common/src/carousel/res/layout/: activity_viewpager.xml  item_nest.xml  view_carousel.xml  view_pager.xml  view_tabs_layout.xml
common/src/drawable/res/drawable/: animatedstatelist.xml  bitmap.xml  clip.xml  inset.xml  levellist.xml  rotate.xml  scale.xml
common/src/drawable/res/layout/: bitmap.xml
common/src/drawable/res/values/: strings.xml
common/src/main/: AndroidManifest.xml
common/src/main/res/drawable/: cust_indeterminate_progress_bar.xml
common/src/main/res/values/: attrs.xml  colors.xml  strings.xml  strings_person.xml  themes.xml
common/src/main/res/values-v21/: themes.xml
common/src/newLayoutExprimental/res/layout/: activity_constraint_and_flexbox.xml  activity_constraintlayout.xml  template.xml
common/video/main/res/drawable/: ic_battery_60_apricot_24dp.xml
common/video/main/res/layout/: view_chaplin.xml
common/ypose/main/cpp/: native-lib.cpp
common/ypose/main/cpp/hotfix/: CMakeLists.txt  HotFix.cpp  hotfixmain.cpp  hotfixmainv2.c
common/ypose/main/cpp/hotfix/include/: art_8.0r1.h
common/ypose/main/jni/: native-lib.cpp
common/ypose/main/jni/hawks/: hawks.h
common/ypose/main/jni/hotfix/: CMakeLists.txt  hotfixmain.cpp
common/ypose/main/jni/hotfix/include/: art_method.h  logutil.h
common/ypose/main/jni/nativelib/: CMakeLists.txt  native-lib.cpp
common/ypose/main/res/layout/: activity_main.xml
components/myhome/src/main/jni/: CMakeLists.txt  client_key.cpp  client_key2.cpp  data_struct_ext.h
framework/common/: CMakeLists.txt  README.md  build.gradle
framework/common/async/: README.md
framework/common/src/main/: AndroidManifest.xml
framework/common/ypose/main/cpp/hawks/: CMakeLists.txt
framework/common/ypose/main/cpp/hotfix/: CMakeLists.txt  hotfixmain.cpp  hotfixmainv2.c
framework/image/: CMakeLists.txt  README.md  build.gradle
framework/image/gif/main/cpp/gif/: androidmain.cpp  com_hawksjamesf_image_GifPlayer.cpp
framework/image/gif/main/jni/codec/: CMakeLists.txt
framework/image/gif/main/jni/gif/: CMakeLists.txt  GifPlayer.cpp  androidmain.cpp  com_hawksjamesf_image_GifPlayer.cpp  jni_load.cpp
framework/image/gif/main/jni/utils/: ReflectUtil.cpp  ThreadUtil.cpp
framework/image/gif/main/res/layout/: activity_gif.xml
framework/image/src/main/: AndroidManifest.xml
framework/image/src/main/jni/frameSequence/: Constants.h  FrameSequence.h  FrameSequenceJNI.cpp  FrameSequence_gif.cpp  FrameSequence_webp.cpp  jni_load.cpp  log.h
framework/image/src/main/jni/frame_sequence/: BitmapDecoderJNI.cpp  FrameSequenceJNI.cpp  FrameSequenceJNI.h  FrameSequence_webp.h
framework/image/src/main/jni/gif/: BitmapDecoderJNI.cpp  CMakeLists.txt  FrameSequence.cpp  FrameSequenceJNI.cpp  FrameSequence_gif.cpp  FrameSequence_webp.cpp  JNIHelpers.cpp  Registry.cpp  Registry.h  Stream.cpp  gif_jni.cpp
framework/image/src/main/jni/gif_codec/: egif_lib.c  gif_hash.c
guard/: CMakeLists.txt  README.md  build.gradle
guard/src/main/: AndroidManifest.xml
guard/src/main/jni/guard/: CMakeLists.txt  guard.cpp  main.cpp
guard/src/main/res/layout/: activity_testguard.xml
image/gif/main/cpp/utils/: CMakeLists.txt  ReflectUtil.cpp  ThreadUtil.cpp
vi/stability/breakpad/: CMakeLists.txt  build.gradle
vi/stability/breakpad/src/main/: AndroidManifest.xml
(+6058 files in other folders)
